fix: remove @CrossOrigin from controllers, fix CORS for Render