@@ -1,6 +1,5 @@
 package com.infosys.lostFoundApplication.config;
 
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -13,14 +12,12 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @EnableMethodSecurity
 public class SystemConfig {
-
-    @Value("${app.cors.allowed-origin:https://campustrack-frontend.onrender.com}")
-    private String allowedOrigin;
 
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration configuration) throws Exception {
@@ -29,67 +26,47 @@ public class SystemConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-
         CorsConfiguration config = new CorsConfiguration();
 
-        config.setAllowedOrigins(List.of(allowedOrigin));
+        // Allow all these origins — covers local dev + both Render deployments
+        config.setAllowedOrigins(Arrays.asList(
+            "http://localhost:3000",
+            "https://campustrack-frontend.onrender.com"
+        ));
 
-        config.setAllowedMethods(
-                List.of("GET", "POST", "PUT", "DELETE", "OPTIONS")
-        );
-
-        config.setAllowedHeaders(List.of("*"));
-
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        config.setAllowedHeaders(Arrays.asList("*"));
+        config.setExposedHeaders(Arrays.asList("Set-Cookie"));
         config.setAllowCredentials(true);
+        config.setMaxAge(3600L);
 
-        UrlBasedCorsConfigurationSource source =
-                new UrlBasedCorsConfigurationSource();
-
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
-
         return source;
     }
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-
         http
-                .cors(Customizer.withDefaults())
-                .csrf(csrf -> csrf.disable())
-
-                .authorizeHttpRequests(auth -> auth
-
-                        .requestMatchers("/lostfound/login/**").permitAll()
-
-                        .requestMatchers("/lostfound/logout").permitAll()
-
-                        .requestMatchers("/lostfound/register").permitAll()
-
-                        .requestMatchers("/lostfound/ws/**").permitAll()
-
-                        .requestMatchers("/lostfound/admin/**").permitAll()
-
-                        .requestMatchers("/lostfound/**").permitAll()
-
-                        .anyRequest().authenticated()
-                )
-
-                .logout(logout -> logout
-
-                        .logoutUrl("/lostfound/logout")
-
-                        .invalidateHttpSession(true)
-
-                        .deleteCookies("JSESSIONID")
-
-                        .logoutSuccessHandler((request, response, authentication) -> {
-
-                            response.setStatus(200);
-
-                            response.getWriter().write("Logout success");
-                        })
-                );
-
+            .cors(Customizer.withDefaults())
+            .csrf(csrf -> csrf.disable())
+            .authorizeHttpRequests(auth -> auth
+                .requestMatchers("/lostfound/login/**").permitAll()
+                .requestMatchers("/lostfound/logout").permitAll()
+                .requestMatchers("/lostfound/register").permitAll()
+                .requestMatchers("/lostfound/ws/**").permitAll()
+                .requestMatchers("/lostfound/**").permitAll()
+                .anyRequest().authenticated()
+            )
+            .logout(logout -> logout
+                .logoutUrl("/lostfound/logout")
+                .invalidateHttpSession(true)
+                .deleteCookies("JSESSIONID")
+                .logoutSuccessHandler((request, response, authentication) -> {
+                    response.setStatus(200);
+                    response.getWriter().write("Logout success");
+                })
+            );
         return http.build();
     }
 }
